--- a/AZMonitoring/AZMonitoring.csproj
+++ b/AZMonitoring/AZMonitoring.csproj
@@ -111,8 +111,17 @@
     <Compile Include="Structures\Stages.cs" />
     <Compile Include="Structures\Type.cs" />
     <Compile Include="Structures\Work.cs" />
+    <Compile Include="Views\AboutPage.xaml.cs">
+      <DependentUpon>AboutPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ChatingPage.xaml.cs" />
     <Compile Include="Views\Prov_Page.xaml.cs" />
+    <Compile Include="Views\Setting\SettingMainPage.xaml.cs">
+      <DependentUpon>SettingMainPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SysManage\SysManageMainPage.xaml.cs">
+      <DependentUpon>SysManageMainPage.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -125,6 +134,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\AboutPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\ChatingPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -132,6 +145,14 @@
     <Page Include="Views\Prov_Page.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\Setting\SettingMainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SysManage\SysManageMainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +199,7 @@
   <ItemGroup>
     <Resource Include="Resources\ysf.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
