--- a/AZMonitoring/AZMonitoring.csproj
+++ b/AZMonitoring/AZMonitoring.csproj
@@ -144,6 +144,9 @@
     <Compile Include="Views\AboutPage.xaml.cs">
       <DependentUpon>AboutPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\All_Chats_Page.xaml.cs">
+      <DependentUpon>All_Chats_Page.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ChatingPage.xaml.cs" />
     <Compile Include="Views\Dashboard\Dashboard_MainPage.xaml.cs">
       <DependentUpon>Dashboard_MainPage.xaml</DependentUpon>
@@ -174,6 +177,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\AboutPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\All_Chats_Page.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
