--- a/AZMonitoring/packages.config
+++ b/AZMonitoring/packages.config
@@ -2,15 +2,18 @@
 <packages>
   <package id="Dragablz" version="0.0.3.203" targetFramework="net45" />
   <package id="FirebaseAuthentication.net" version="3.4.0" targetFramework="net45" />
+  <package id="FirebaseDatabase.net" version="4.0.4" targetFramework="net462" />
   <package id="FirebaseStorage.net" version="1.0.3" targetFramework="net45" />
   <package id="FireSharp" version="2.0.4" targetFramework="net45" />
   <package id="JWT" version="2.3.2" targetFramework="net45" />
+  <package id="LiteDB" version="4.1.4" targetFramework="net462" />
   <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net45" />
   <package id="MaterialDesignColors" version="1.2.2" targetFramework="net45" />
   <package id="MaterialDesignThemes" version="3.0.1" targetFramework="net45" />
   <package id="MaterialDesignThemes.MahApps.163" version="0.0.111" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net45" />
@@ -22,22 +25,24 @@
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net45" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net45" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net45" />
-  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net45" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net45" />
-  <package id="System.IO" version="4.3.0" targetFramework="net45" />
+  <package id="System.IO" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Linq" version="4.3.0" targetFramework="net45" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net45" />
   <package id="System.Net.Http" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net45" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net45" />
-  <package id="System.Reflection" version="4.3.0" targetFramework="net45" />
+  <package id="System.Reactive" version="4.0.0" targetFramework="net462" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net45" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net45" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net45" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net45" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net462" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net45" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net45" />
@@ -45,6 +50,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net45" />
   <package id="System.Threading" version="4.3.0" targetFramework="net45" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net45" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net462" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net45" />
 </packages>
