--- a/MigrationBackup/6b09292e/AZMonitoring/packages.config
+++ b/MigrationBackup/6b09292e/AZMonitoring/packages.config
@@ -17,6 +17,8 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net45" />
+  <package id="Microsoft.Toolkit.Wpf.UI.Controls.WebView" version="6.0.1" targetFramework="net462" />
+  <package id="Microsoft.Windows.SDK.Contracts" version="10.0.18362.2005" targetFramework="net462" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
   <package id="OpenTok.Client" version="2.16.5" targetFramework="net46" />
@@ -45,6 +47,8 @@
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime.WindowsRuntime" version="4.6.0" targetFramework="net462" />
+  <package id="System.Runtime.WindowsRuntime.UI.Xaml" version="4.6.0" targetFramework="net462" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net45" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net45" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net45" />
